--- a/index.html
+++ b/index.html
@@ -1,254 +1,281 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profit Tracker</title>
     <style>
-        /* 全局样式 */
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            margin: 0;
-            padding: 0;
-            background: linear-gradient(135deg, #1e1e2f, #2c2c3f);
-            color: #ffffff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            overflow: hidden;
-        }
+      /* 全局样式 */
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: linear-gradient(135deg, #1e1e2f, #2c2c3f);
+        color: #ffffff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        overflow: hidden;
+      }
 
-        /* 容器样式 */
+      /* 容器样式 */
+      .container {
+        background: rgba(44, 44, 63, 0.9);
+        border-radius: 16px;
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+        padding: 40px;
+        width: 90%;
+        max-width: 1200px; /* 增大最大宽度 */
+        min-width: 500px;
+        height: auto;
+        max-height: 90vh;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+        gap: 32px; /* 增大间距 */
+        backdrop-filter: blur(10px);
+      }
+
+      /* 卡片通用样式 */
+      .card {
+        background: rgba(57, 57, 77, 0.8);
+        border-radius: 12px;
+        padding: 32px; /* 增大内边距 */
+        box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+      }
+
+      .card:hover {
+        transform: translateY(-4px);
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
+      }
+
+      /* 比例卡片样式 */
+      .ratio-card {
+        text-align: center;
+      }
+
+      .ratio-card h2 {
+        margin: 0;
+        font-size: 48px; /* 增大字体 */
+        font-weight: 600;
+        color: #ffd700;
+      }
+
+      .ratio-card span {
+        font-size: 64px; /* 增大字体 */
+        font-weight: bold;
+        color: #87ceeb;
+      }
+
+      /* 利润卡片样式 */
+      .profit-card {
+        position: relative;
+      }
+
+      .profit-card h2 {
+        margin: 0 0 24px 0; /* 增大间距 */
+        font-size: 40px; /* 增大字体 */
+        font-weight: 600;
+        color: #ffd700;
+      }
+
+      .profit-card .price {
+        position: absolute;
+        top: 32px; /* 调整位置 */
+        right: 32px; /* 调整位置 */
+        font-size: 36px; /* 增大字体 */
+        color: #87ceeb;
+      }
+
+      .profit-card p {
+        margin: 0;
+        font-size: 36px; /* 增大字体 */
+        color: #ffffff;
+      }
+
+      /* 总利润样式 */
+      .total-profit {
+        text-align: center;
+      }
+
+      .total-profit p {
+        margin: 0;
+        font-size: 56px; /* 增大字体 */
+        font-weight: bold;
+        color: #32cd32;
+      }
+
+      .converted-profit {
+        margin-top: 16px; /* 增大间距 */
+        font-size: 40px; /* 增大字体 */
+        color: #87ceeb;
+      }
+
+      /* 响应式设计 */
+      @media (max-width: 600px) {
         .container {
-            background: rgba(44, 44, 63, 0.9);
-            border-radius: 16px;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
-            padding: 40px;
-            width: 90%;
-            max-width: 1200px; /* 增大最大宽度 */
-            min-width: 500px;
-            height: auto;
-            max-height: 90vh;
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
-            gap: 32px; /* 增大间距 */
-            backdrop-filter: blur(10px);
-        }
-
-        /* 卡片通用样式 */
-        .card {
-            background: rgba(57, 57, 77, 0.8);
-            border-radius: 12px;
-            padding: 32px; /* 增大内边距 */
-            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
-
-        .card:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
-        }
-
-        /* 比例卡片样式 */
-        .ratio-card {
-            text-align: center;
+          padding: 24px;
+          gap: 24px;
         }
 
         .ratio-card h2 {
-            margin: 0;
-            font-size: 48px; /* 增大字体 */
-            font-weight: 600;
-            color: #ffd700;
+          font-size: 36px;
         }
 
         .ratio-card span {
-            font-size: 64px; /* 增大字体 */
-            font-weight: bold;
-            color: #87ceeb;
-        }
-
-        /* 利润卡片样式 */
-        .profit-card {
-            position: relative;
+          font-size: 48px;
         }
 
         .profit-card h2 {
-            margin: 0 0 24px 0; /* 增大间距 */
-            font-size: 40px; /* 增大字体 */
-            font-weight: 600;
-            color: #ffd700;
+          font-size: 32px;
         }
 
         .profit-card .price {
-            position: absolute;
-            top: 32px; /* 调整位置 */
-            right: 32px; /* 调整位置 */
-            font-size: 36px; /* 增大字体 */
-            color: #87ceeb;
+          font-size: 28px;
         }
 
         .profit-card p {
-            margin: 0;
-            font-size: 36px; /* 增大字体 */
-            color: #ffffff;
-        }
-
-        /* 总利润样式 */
-        .total-profit {
-            text-align: center;
+          font-size: 28px;
         }
 
         .total-profit p {
-            margin: 0;
-            font-size: 56px; /* 增大字体 */
-            font-weight: bold;
-            color: #32cd32;
+          font-size: 40px;
         }
 
         .converted-profit {
-            margin-top: 16px; /* 增大间距 */
-            font-size: 40px; /* 增大字体 */
-            color: #87ceeb;
+          font-size: 28px;
         }
-
-        /* 响应式设计 */
-        @media (max-width: 600px) {
-            .container {
-                padding: 24px;
-                gap: 24px;
-            }
-
-            .ratio-card h2 {
-                font-size: 36px;
-            }
-
-            .ratio-card span {
-                font-size: 48px;
-            }
-
-            .profit-card h2 {
-                font-size: 32px;
-            }
-
-            .profit-card .price {
-                font-size: 28px;
-            }
-
-            .profit-card p {
-                font-size: 28px;
-            }
-
-            .total-profit p {
-                font-size: 40px;
-            }
-
-            .converted-profit {
-                font-size: 28px;
-            }
-        }
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <!-- 总利润卡片 -->
-        <div class="card total-profit">
-            <p id="totalProfit">Total Profit (USD): Calculating...</p>
-            <p class="converted-profit" id="totalProfitCny">Converted to CNY: Calculating...</p>
-        </div>
+      <!-- 总利润卡片 -->
+      <div class="card total-profit">
+        <p id="totalProfit">Total Profit (USD): Calculating...</p>
+        <p class="converted-profit" id="totalProfitCny">
+          Converted to CNY: Calculating...
+        </p>
+      </div>
 
-        <!-- MELANIA 利润卡片 -->
-        <div class="card profit-card" id="melaniaProfit">
-            <h2>MELANIA Position</h2>
-            <span class="price" id="melaniaPrice">Price: $0.00</span>
-            <p>Profit: Calculating...</p>
-        </div>
+      <!-- MELANIA 利润卡片 -->
+      <div class="card profit-card" id="melaniaProfit">
+        <h2>MELANIA</h2>
+        <span class="price" id="melaniaPrice">Price: $0.00</span>
+        <p>Profit: Calculating...</p>
+      </div>
 
-        <!-- TRUMP 利润卡片 -->
-        <div class="card profit-card" id="trumpProfit">
-            <h2>TRUMP Position</h2>
-            <span class="price" id="trumpPrice">Price: $0.00</span>
-            <p>Profit: Calculating...</p>
-        </div>
+      <!-- TRUMP 利润卡片 -->
+      <div class="card profit-card" id="trumpProfit">
+        <h2>TRUMP</h2>
+        <span class="price" id="trumpPrice">Price: $0.00</span>
+        <p>Profit: Calculating...</p>
+      </div>
 
-        
-        <!-- 比例卡片 -->
-        <div class="card ratio-card">
-            <h2>TRUMP / MELANIA: <span id="trumpMelaniaRatio">Calculating...</span></h2>
-        </div>
+      <!-- 比例卡片 -->
+      <div class="card ratio-card">
+        <h2>
+          TRUMP / MELANIA: <span id="trumpMelaniaRatio">Calculating...</span>
+        </h2>
+      </div>
     </div>
 
     <script>
-        const exchangeRate = 7.21; // USD to CNY
-        const melania = { symbol: "MELANIA", position: -70.1, entryPrice: 2.825, isShort: true };
-        const trump = { symbol: "TRUMP", position: 6.4, entryPrice: 30.8, isShort: false };
-        const updateInterval = 500; // ms
-        const apiUrlBase = "https://api.bitget.com/api/mix/v1/market/ticker?symbol=";
+      const exchangeRate = 7.21; // USD to CNY
+      const melania = {
+        symbol: "MELANIA",
+        position: -70.1,
+        entryPrice: 2.825,
+        isShort: true,
+      };
+      const trump = {
+        symbol: "TRUMP",
+        position: 6.4,
+        entryPrice: 30.8,
+        isShort: false,
+      };
+      const updateInterval = 500; // ms
+      const apiUrlBase =
+        "https://api.bitget.com/api/mix/v1/market/ticker?symbol=";
 
-        async function fetchPrice(symbol) {
-            try {
-                const response = await fetch(`${apiUrlBase}${symbol}USDT_UMCBL`);
-                const data = await response.json();
-                return parseFloat(data.data.last);
-            } catch (error) {
-                console.error(`Error fetching price for ${symbol}:`, error);
-                return null;
-            }
+      async function fetchPrice(symbol) {
+        try {
+          const response = await fetch(`${apiUrlBase}${symbol}USDT_UMCBL`);
+          const data = await response.json();
+          return parseFloat(data.data.last);
+        } catch (error) {
+          console.error(`Error fetching price for ${symbol}:`, error);
+          return null;
+        }
+      }
+
+      async function updateProfit() {
+        let totalProfitUsd = 0;
+
+        // Update MELANIA profit
+        const melaniaPrice = await fetchPrice(melania.symbol);
+        if (melaniaPrice !== null) {
+          const melaniaProfit = melania.isShort
+            ? (melania.entryPrice - melaniaPrice) * Math.abs(melania.position)
+            : (melaniaPrice - melania.entryPrice) * melania.position;
+          totalProfitUsd += melaniaProfit;
+          document.getElementById(
+            "melaniaPrice"
+          ).textContent = `Price: $${melaniaPrice.toFixed(2)}`;
+          document
+            .getElementById("melaniaProfit")
+            .querySelector("p").textContent = `Profit: $${melaniaProfit.toFixed(
+            2
+          )}`;
         }
 
-        async function updateProfit() {
-            let totalProfitUsd = 0;
+        // Update TRUMP profit
+        const trumpPrice = await fetchPrice(trump.symbol);
+        if (trumpPrice !== null) {
+          const trumpProfit = trump.isShort
+            ? (trump.entryPrice - trumpPrice) * Math.abs(trump.position)
+            : (trumpPrice - trump.entryPrice) * trump.position;
+          totalProfitUsd += trumpProfit;
+          document.getElementById(
+            "trumpPrice"
+          ).textContent = `Price: $${trumpPrice.toFixed(2)}`;
+          document
+            .getElementById("trumpProfit")
+            .querySelector("p").textContent = `Profit: $${trumpProfit.toFixed(
+            2
+          )}`;
 
-            // Update MELANIA profit
-            const melaniaPrice = await fetchPrice(melania.symbol);
-            if (melaniaPrice !== null) {
-                const melaniaProfit = melania.isShort
-                    ? (melania.entryPrice - melaniaPrice) * Math.abs(melania.position)
-                    : (melaniaPrice - melania.entryPrice) * melania.position;
-                totalProfitUsd += melaniaProfit;
-                document.getElementById("melaniaPrice").textContent = `Price: $${melaniaPrice.toFixed(2)}`;
-                document.getElementById("melaniaProfit").querySelector("p").textContent =
-                    `Profit: $${melaniaProfit.toFixed(2)}`;
-            }
-
-            // Update TRUMP profit
-            const trumpPrice = await fetchPrice(trump.symbol);
-            if (trumpPrice !== null) {
-                const trumpProfit = trump.isShort
-                    ? (trump.entryPrice - trumpPrice) * Math.abs(trump.position)
-                    : (trumpPrice - trump.entryPrice) * trump.position;
-                totalProfitUsd += trumpProfit;
-                document.getElementById("trumpPrice").textContent = `Price: $${trumpPrice.toFixed(2)}`;
-                document.getElementById("trumpProfit").querySelector("p").textContent =
-                    `Profit: $${trumpProfit.toFixed(2)}`;
-
-                // Update TRUMP/MELANIA ratio
-                if (melaniaPrice !== null) {
-                    const ratio = (trumpPrice / melaniaPrice).toFixed(2);
-                    document.getElementById("trumpMelaniaRatio").textContent = ratio;
-                }
-            }
-
-            // Update total profit
-            const totalProfitCny = totalProfitUsd * exchangeRate;
-            document.getElementById("totalProfit").textContent =
-                `Total Profit (USD): $${totalProfitUsd.toFixed(0)}`;
-            document.getElementById("totalProfitCny").textContent =
-                `Converted to CNY: ¥${totalProfitCny.toFixed(0)}`;
-
-            // Update title with CNY value
-            document.title = `${totalProfitCny.toFixed(0)}`;
+          // Update TRUMP/MELANIA ratio
+          if (melaniaPrice !== null) {
+            const ratio = (trumpPrice / melaniaPrice).toFixed(2);
+            document.getElementById("trumpMelaniaRatio").textContent = ratio;
+          }
         }
 
-        // Update profits every 0.5 seconds
-        setInterval(updateProfit, updateInterval);
+        // Update total profit
+        const totalProfitCny = totalProfitUsd * exchangeRate;
+        document.getElementById(
+          "totalProfit"
+        ).textContent = `USD: $${totalProfitUsd.toFixed(0)}`;
+        document.getElementById(
+          "totalProfitCny"
+        ).textContent = `CNY: ¥${totalProfitCny.toFixed(0)}`;
 
-        // Initial load
-        updateProfit();
+        // Update title with CNY value and ratio
+        if (melaniaPrice !== null && trumpPrice !== null) {
+          const ratio = (trumpPrice / melaniaPrice).toFixed(2);
+          document.title = `${totalProfitCny.toFixed(0)} ${ratio}`;
+        }
+      }
+
+      // Update profits every 0.5 seconds
+      setInterval(updateProfit, updateInterval);
+
+      // Initial load
+      updateProfit();
     </script>
-</body>
-
+  </body>
 </html>
